<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textSize="18sp"
                android:textColor="#333333"
                android:layout_centerVertical="true"
                android:text="@string/label_time"/>
            <TextView
                android:id="@+id/tv_time"
                android:layout_toRightOf="@id/tv_timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333333"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:text="@string/default_time"/>
            <TextView
                android:id="@+id/tv_scoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_time"
                android:textSize="18sp"
                android:textColor="#333333"
                android:layout_marginLeft="16dp"
                android:layout_centerVertical="true"
                android:text="@string/label_score"/>
            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_scoreLabel"
                android:textColor="#333333"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:text="@string/default_score"/>
            <ImageView
                android:id="@+id/img_pause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="6dp"
                android:scaleType="center"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/img_pause_button"
                android:background="@drawable/drawable_pause_button_background"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e3e3e3"/>
        <dym.unique.com.tetris.view.GameView
            android:id="@+id/gv_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e3e3e3"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_left"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/drawable_left_button"/>
            <ImageView
                android:id="@+id/img_right"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/drawable_right_button"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:id="@+id/img_rotate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/drawable_rotate_button"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/notification2"
            android:textColor="#666666"
            android:background="@drawable/drawable_notification_text_background"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_above="@id/tv_notification"
            android:textSize="18sp"
            android:textColor="#333333"/>
    </RelativeLayout>
</RelativeLayout>